--- a/.github/workflows/first-example.yaml
+++ b/.github/workflows/first-example.yaml
@@ -1,3 +1,4 @@
+name: my first workflow
 on: push
 
 jobs:
@@ -8,7 +9,8 @@ jobs:
           uses: actions/checkout@v6        
 
         - name: list files
-          run: ls
-
-        - name: read files
-          run: cat README.md
+          run: |
+            ls -ltrh
+            cat README.md
+        - name: Generate ASCII Artwork
+          run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
