--- a/.github/workflows/first-example.yaml
+++ b/.github/workflows/first-example.yaml
@@ -12,5 +12,15 @@ jobs:
           run: |
             ls -ltrh
             cat README.md
+
+        - name: Install cowsay
+          run: sudo apt get-update && sudo apt-get install cowsay -y
+
         - name: Generate ASCII Artwork
           run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
+
+        - name: verify the dragon
+          run: grep -i dragon dragon.txt
+
+        - name: file check
+          run: cat dragon.txt
