--- a/.github/workflows/first-example.yaml
+++ b/.github/workflows/first-example.yaml
@@ -14,7 +14,7 @@ jobs:
             cat README.md
 
         - name: Install cowsay
-          run: sudo apt get-update && sudo apt-get install cowsay -y
+          run: sudo apt-get update && sudo apt-get install cowsay -y
 
         - name: Generate ASCII Artwork
           run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
