--- a/.github/workflows/first-example.yaml
+++ b/.github/workflows/first-example.yaml
@@ -12,4 +12,6 @@ jobs:
           run: ls -ltrh
 
         - name: run the script
-          run: ./ascii-script.sh
+          run: |
+            chmod +x ./ascii-script.sh 
+            ./ascii-script.sh
