--- a/.github/workflows/Generate-ASCII-Artwork.yaml
+++ b/.github/workflows/Generate-ASCII-Artwork.yaml
@@ -14,7 +14,8 @@ jobs:
         - name: Sleep for 30 seconds
           run: sleep 30
  
-  test_job:
+  test_job: 
+    needs: build_job
     runs-on: ubuntu-latest
     steps:
       - name: Sleep for 10 seconds
@@ -23,6 +24,7 @@ jobs:
         run: grep -i "dragon" dragon.txt
 
   deploy_job:
+    needs: [test_job]
     runs-on: ubuntu-latest
     steps:
       - name: Read File
