--- a/.github/workflows/Generate-ASCII-Artwork.yaml
+++ b/.github/workflows/Generate-ASCII-Artwork.yaml
@@ -13,13 +13,25 @@ jobs:
 
         - name: Sleep for 30 seconds
           run: sleep 30
+        
+        - name: Upload Dragon text file
+          uses: actions/upload-artifact@v3
+          with:
+            name: dragon-text-file
+            path: dragon.txt
  
   test_job: 
     needs: build_job
     runs-on: ubuntu-latest
     steps:
+      - name: Download Dragon text file
+        uses: actions/download-artifact@v3
+        with:
+          name: dragon-text-file
+
       - name: Sleep for 10 seconds
         run: sleep 10
+        
       - name: Test File Exists
         run: grep -i "dragon" dragon.txt
 
