updated artifacts in deploy_job

--- a/.github/workflows/Generate-ASCII-Artwork.yaml
+++ b/.github/workflows/Generate-ASCII-Artwork.yaml
@@ -39,6 +39,10 @@ jobs:
     needs: [test_job]
     runs-on: ubuntu-latest
     steps:
+      - name: Download Dragon text file
+        uses: actions/download-artifact@v3
+        with:
+          name: dragon-text-file
       - name: Read File
         run: cat dragon.txt
       - name: Deploy
