--- a/.github/workflows/env-variables.yaml
+++ b/.github/workflows/env-variables.yaml
@@ -11,7 +11,7 @@ jobs:
           DOCKER_USERNAME: siddharth1
           IMAGE_NAME: github-actions-nginx
         run: |
-          docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest .
 
       - name: Docker Login
         env:
